// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Molecules | Input / FormFieldSimple Default 1`] = `
.c1 {
  text-overflow: ellipsis;
  white-space: nowrap;
  cursor: pointer;
}

.c2 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c0 {
  width: 200px;
  display: inline-block;
}

<div
  className="c0"
>
  <label
    className="c1"
    hidden={false}
    htmlFor="unique-id-1"
  >
    <span
      className="c2"
    >
      Label
      
    </span>
  </label>
  <div
    style={
      Object {
        "background": "aqua",
      }
    }
  >
    Pass in any children you want
  </div>
</div>
`;

exports[`Storyshots Molecules | Input / FormFieldSimple Docs 1`] = `
<p>
  This is a helper component, you are probably looking for something else. The difference between this component and the FormField component is that this does not do anything to the border of the field.
</p>
`;

exports[`Storyshots Molecules | Input / FormFieldSimple Error 1`] = `
.c4 {
  position: absolute;
  height: 1px;
  width: 1px;
  overflow: hidden;
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
}

.c1 {
  text-overflow: ellipsis;
  white-space: nowrap;
  cursor: pointer;
}

.c2 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c3 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #FF1900;
  margin: 0;
  font-weight: 400;
  font-size: 12px;
  line-height: 1.3333333333333333;
}

.c0 {
  width: 200px;
  display: inline-block;
}

<div
  className="c0"
>
  <label
    className="c1"
    hidden={false}
    htmlFor="unique-id-2"
  >
    <span
      className="c2"
    >
      Label
      
    </span>
  </label>
  <div
    style={
      Object {
        "background": "aqua",
      }
    }
  >
    Pass in any children you want
  </div>
  <div>
    <span
      className="c3"
    >
      <div
        className="c4"
      >
        Error: 
      </div>
      error
    </span>
  </div>
</div>
`;

exports[`Storyshots Molecules | Input / FormFieldSimple Extra info 1`] = `
.c1 {
  text-overflow: ellipsis;
  white-space: nowrap;
  cursor: pointer;
}

.c2 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c3 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 12px;
  line-height: 1.3333333333333333;
}

.c0 {
  width: 200px;
  display: inline-block;
}

<div
  className="c0"
>
  <label
    className="c1"
    hidden={false}
    htmlFor="unique-id-2"
  >
    <span
      className="c2"
    >
      Label
      
    </span>
  </label>
  <div
    style={
      Object {
        "background": "aqua",
      }
    }
  >
    Pass in any children you want
  </div>
  <div>
    <span
      className="c3"
    >
      Some extra info
    </span>
  </div>
</div>
`;

exports[`Storyshots Molecules | Input / FormFieldSimple Required 1`] = `
.c1 {
  text-overflow: ellipsis;
  white-space: nowrap;
  cursor: pointer;
}

.c2 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c0 {
  width: 200px;
  display: inline-block;
}

<div
  className="c0"
>
  <label
    className="c1"
    hidden={false}
    htmlFor="unique-id-1"
  >
    <span
      className="c2"
    >
      Label
       *
    </span>
  </label>
  <div
    style={
      Object {
        "background": "aqua",
      }
    }
  >
    Pass in any children you want
  </div>
</div>
`;

exports[`Storyshots Molecules | Input / FormFieldSimple Required with no star 1`] = `
.c1 {
  text-overflow: ellipsis;
  white-space: nowrap;
  cursor: pointer;
}

.c2 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c0 {
  width: 200px;
  display: inline-block;
}

<div
  className="c0"
>
  <label
    className="c1"
    hidden={false}
    htmlFor="unique-id-1"
  >
    <span
      className="c2"
    >
      Label
      
    </span>
  </label>
  <div
    style={
      Object {
        "background": "aqua",
      }
    }
  >
    Pass in any children you want
  </div>
</div>
`;
